slight style adjustment for fixing margin on the trails list on mobile

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -51,11 +51,9 @@ body
   background-color: rgb(30, 95, 30)
   color: white
   border-bottom: 1px dashed white
-  
   display: flex
   align-items: flex-start
   box-sizing: border-box
-  margin-right: 1em
 
 .trail__item--header
   flex: 1
